@@ -38,23 +38,30 @@ extern "C" {
 /** verbosity levels of output */
 enum SCIP_VerbLevel
 {
-   SCIP_VERBLEVEL_NONE    = 0,           /**< only error and warning messages are displayed */
-   SCIP_VERBLEVEL_DIALOG  = 1,           /**< only interactive dialogs, errors, and warnings are displayed */
-   SCIP_VERBLEVEL_MINIMAL = 2,           /**< only important messages are displayed */
-   SCIP_VERBLEVEL_NORMAL  = 3,           /**< standard messages are displayed */
-   SCIP_VERBLEVEL_HIGH    = 4,           /**< a lot of information is displayed */
-   SCIP_VERBLEVEL_FULL    = 5            /**< all messages are displayed */
+   SCIP_VERBLEVEL_NONE    = 0,          /**< only error and warning messages are displayed */
+   SCIP_VERBLEVEL_DIALOG  = 1,          /**< only interactive dialogs, errors, and warnings are displayed */
+   SCIP_VERBLEVEL_MINIMAL = 2,          /**< only important messages are displayed */
+   SCIP_VERBLEVEL_NORMAL  = 3,          /**< standard messages are displayed */
+   SCIP_VERBLEVEL_HIGH    = 4,          /**< a lot of information is displayed */
+   SCIP_VERBLEVEL_FULL    = 5           /**< all messages are displayed */
 };
 typedef enum SCIP_VerbLevel SCIP_VERBLEVEL;
 
-typedef struct SCIP_Messagehdlr SCIP_MESSAGEHDLR;  /**< message handler */
-typedef struct SCIP_MessagehdlrData SCIP_MESSAGEHDLRDATA; /**< message handler data */
+typedef struct SCIP_Messagehdlr SCIP_MESSAGEHDLR;           /**< message handler */
+typedef struct SCIP_MessagehdlrData SCIP_MESSAGEHDLRDATA;   /**< message handler data */
+
+/** generic messagehandler output function
+ *
+ *  Should be equal to SCIP_DECL_MESSAGEWARNING, SCIP_DECL_MESSAGEDIALOG, and SCIP_DECL_MESSAGEINFO
+ */
+#define SCIP_DECL_MESSAGEOUTPUTFUNC(x) void x (SCIP_MESSAGEHDLR* messagehdlr, FILE* file, const char* msg)
+
 
 /** error message print method
  *
  *  This method is invoked, if SCIP wants to display an error message to the screen or a file
  *
- *  @note That this is independed of the message handler
+ *  @note This function is independent of any message handler
  *
  *  input:
  *  - msg             : string to output into the file
